--- a/style.css
+++ b/style.css
@@ -1,24 +1,52 @@
 body {
     background-color: #10c42b;
+    margin: 0;
 }
 
-header {
+.character-body{
+    background-color: pink;
+    margin: 0;
+}
+
+.main-header {
     text-align: center;
     color: #10c42b;
     background-image: url(https://w0.peakpx.com/wallpaper/506/344/HD-wallpaper-rick-and-morty-in-outer-space.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     height: 250px;
-    padding-top: 25px;
-    margin: -12px;
+    padding: 25px;
+}
+.character-header{
+    background-image: url(./images/5196310.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    text-align: center;
+    height: 250px;
+    padding: 25px;
+}
+
+.page-container {
+    position: relative;
+    min-height: 100vh;
+}
+
+.character-container {
+    position: relative;
+    min-height: 100vh;
+}
+
+.content {
+    padding-bottom: 2.5rem;
 }
 
 footer {
-    color: aliceblue;
-    font-size: 15px;
-    text-align: center;
-    position: fixed;
-    padding: 20px 10px 10px 10px;
-    bottom: 0;
+    position: absolute;
     width: 100%;
-    height: 25px;
+    bottom: 0;
+    padding-top: 20px;
+    height: 2.5rem;
+    text-align: center;
+    color: aliceblue;
     background-color: black;
 }
