--- a/style.css
+++ b/style.css
@@ -26,6 +26,17 @@ body {
     padding: 25px;
 }
 
+.error-container {
+    border: 3px solid rebeccapurple;
+    margin-top: 25px;
+    padding: 15px;
+}
+
+.error-message {
+    color: crimson;
+    text-align: center;
+}
+
 .page-container {
     position: relative;
     min-height: 100vh;
@@ -36,6 +47,11 @@ body {
     min-height: 100vh;
 }
 
+.form {
+    display: flex;
+    justify-content: space-evenly;
+}
+
 .content {
     padding-bottom: 2.5rem;
 }
@@ -44,7 +60,7 @@ body {
     padding-bottom: 5rem;
     padding-left: 10px;
     padding-right: 10px;
-    padding-top: 10px;
+    padding-top: 30px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1em;
