--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Satisfy&display=swap');
+
 body {
     background-color: #10c42b;
     margin: 0;
@@ -43,6 +45,8 @@ a:hover, a:active{
     background-size: 100% 100%;
     height: 250px;
     padding: 25px;
+    font-family: 'Caveat', cursive;
+    font-size: 25px;
 }
 .character-header{
     background-image: url(./images/5196310.png);
@@ -51,6 +55,8 @@ a:hover, a:active{
     text-align: center;
     height: 250px;
     padding: 25px;
+    font-family: 'Satisfy', cursive;
+    font-size: 35px;
 }
 
 .error-container {
@@ -110,6 +116,13 @@ details img {
     margin: auto;
     text-align: center;
     background-color: rgb(107, 84, 200);
+}
+
+.text-link {
+    text-align: center;
+    font-size: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .form {
