--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Satisfy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Great+Vibes&family=Satisfy&display=swap');
 
 body {
     background-color: #10c42b;
@@ -86,6 +86,16 @@ details img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+summary {
+    font-size: 24px;
+    font-family: 'Great Vibes', cursive;
+}
+
+.sum {
+    font-size: 20px;
+    text-align: center;
 }
 
 .form-info {
