fixed character cards height

--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ summary {
 .card{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
+    height: 100%;
     margin: auto;
     border-radius: 32px;
     text-align: center;
