--- a/style.css
+++ b/style.css
@@ -1,209 +1,255 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Great+Vibes&family=Kaushan+Script&family=Satisfy&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Great+Vibes&family=Kaushan+Script&family=Satisfy&display=swap");
 
-body {
-    background-color: #10c42b;
-    margin: 0;
+body,
+html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
-.character-body{
-    background-color: rgb(245, 162, 176);
-    margin: 0;
+.index-body {
+  background-color: #10c42b;
+}
+.character-body {
+  background-color: rgb(245, 162, 176);
+  margin: 0;
 }
 
 .link-1 {
-    display: flex;
-    justify-content: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    transition: background-color 0.5s;
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  transition: background-color 0.5s;
 }
 
 .link-2 {
-    display: flex;
-    justify-content: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    transition: background-color 0.5s;
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  transition: background-color 0.5s;
 }
 
-a{
-    font-size: 25px;
+a {
+  font-size: 25px;
 }
 
-a:hover, a:active{
-    font-size: 150%;
-    font-family: 'Kaushan Script', cursive;
-    color: white;
-    background-color: gold;
+a:hover,
+a:active {
+  font-size: 150%;
+  font-family: "Kaushan Script", cursive;
+  color: white;
+  background-color: gold;
 }
 
 .main-header {
-    text-align: center;
-    color: #10c42b;
-    background-image: url(https://w0.peakpx.com/wallpaper/506/344/HD-wallpaper-rick-and-morty-in-outer-space.jpg);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    height: 250px;
-    padding: 25px;
-    font-family: 'Caveat', cursive;
-    font-size: 25px;
+  text-align: center;
+  color: #10c42b;
+  background-image: url(https://w0.peakpx.com/wallpaper/506/344/HD-wallpaper-rick-and-morty-in-outer-space.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 250px;
+  padding: 25px;
+  font-family: "Caveat", cursive;
+  font-size: 25px;
 }
-.character-header{
-    background-image: url(./images/5196310.png);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    text-align: center;
-    height: 250px;
-    padding: 25px;
-    font-family: 'Satisfy', cursive;
-    font-size: 35px;
+.character-header {
+  background-image: url(./images/5196310.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  text-align: center;
+  height: 250px;
+  padding: 25px;
+  font-family: "Satisfy", cursive;
+  font-size: 35px;
 }
 
 .error-container {
-    border: 3px solid rebeccapurple;
-    margin-top: 25px;
-    padding: 15px;
+  border: 3px solid rebeccapurple;
+  margin-top: 25px;
+  padding: 15px;
 }
 
 .error-message {
-    color: crimson;
-    text-align: center;
+  color: crimson;
+  text-align: center;
 }
 
 .page-container {
-    position: relative;
-    min-height: 100vh;
+  position: relative;
+  min-height: 100vh; /* Full viewport height */
 }
 
 details {
-    padding-left: 10px;
-    padding-top: 20px;
-    padding-right: 10px;
-    cursor: context-menu;
+  padding-left: 10px;
+  padding-top: 20px;
+  padding-right: 10px;
+  cursor: context-menu;
 }
 
 details img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 summary {
-    font-size: 24px;
-    font-family: 'Kaushan Script', cursive;
+  font-size: 24px;
+  font-family: "Kaushan Script", cursive;
 }
 
 .sum {
-    font-size: 20px;
-    text-align: center;
+  font-size: 20px;
+  text-align: center;
 }
 
 .form-info {
-    cursor: help;
+  cursor: help;
 }
 
 .character-container {
-    position: relative;
-    min-height: 100vh;
+  position: relative;
+  min-height: 100vh;
 }
 
 .card-title {
-    text-align: center;
-    text-decoration: underline;
+  text-align: center;
+  text-decoration: underline;
 }
 
 .card-bio {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(10em, 1fr));
-    gap: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  padding: 20px;
 }
 
-.card{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
-    height: 100%;
-    margin: auto;
-    border-radius: 32px;
-    text-align: center;
-    background-color: rgb(107, 84, 200);
+.card {
+  perspective: 500px;
+  width: 300px;
+  height: 300px;
+  position: relative;
+  margin: auto;
+}
+
+.card-inner {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
+}
+
+.card:hover .card-inner {
+  transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card-front {
+  background-color: rgb(107, 84, 200);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-front img {
+  width: 100%;
+  border-radius: 32px 32px 0px 0px;
+}
+
+.card-back {
+  background-color: rgb(245, 162, 176);
+  transform: rotateY(180deg);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 15px;
 }
 
 .card img {
-    border-radius: 32px 32px 0px 0px;
+  border-radius: 32px 32px 0px 0px;
 }
 
 .text-link {
-    text-align: center;
-    font-size: 20px;
-    padding-right: 10px;
-    padding-left: 10px;
+  text-align: center;
+  font-size: 20px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 .form {
-    display: flex;
-    justify-content: space-evenly;
-    gap: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 20px;
 }
 
 button {
-    margin-top: 25px;
+  margin-top: 25px;
 }
 
 .content {
-    padding-bottom: 5rem;
+  padding-bottom: 5rem;
 }
 
 .characterInfo {
-    padding-bottom: 5rem;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 30px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 1em;
+  padding-bottom: 5rem;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 30px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1em;
 }
 
 article {
-    text-align: center;
+  text-align: center;
 }
 
 article img {
-    border-radius: 50%;
-    border: 2px solid black;
+  border-radius: 50%;
+  border: 2px solid black;
 }
 
 footer {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    height: 5rem;
-    padding-top: 5px;
-    text-align: center;
-    color: aliceblue;
-    background-image: url(./images/Screenshot\ 2023-07-11\ at\ 10.15.54\ PM.png);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
+  width: 100%;
+  height: 6rem;
+  padding: 30px 0 30px 0;
+  text-align: center;
+  color: aliceblue;
+  background-image: url(./images/Screenshot\ 2023-07-11\ at\ 10.15.54\ PM.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
 @media (max-width: 1293px) {
-    .characterInfo{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-    }
+  .characterInfo {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 @media (max-width: 970px) {
-    .characterInfo{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-    }
+  .characterInfo {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 @media (max-width: 649px) {
-    .characterInfo{
-        display: grid;
-        grid-template-columns: 1fr;
-    }
+  .characterInfo {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
 }
